--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="menuItem_order_by">Order By</string>
     <string name="most_popular_menuItem">Most Popular</string>
     <string name="top_rated_menuItem">Top Rated</string>
+    <string name="Favorite">Your Favorite Movies</string>
+    <string name="authority">com.example.movieapp</string>
 </resources>
